# zero2prod

./: Cargo.toml  README.md
.github/workflows/: ci.yml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
